# nbl-reflect

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/nbl/reflect/: ShaderReflection.hpp
src/: ShaderReflection.cpp  ShaderReflectionUtils.cpp
test/: test.cpp
